@@ -16,42 +16,54 @@ BEGIN {
     }
 }
 
+use strict;
+if ($ENV{PERL_CORE}) {
+  require("./test.pl");
+}
+else {
+  require("./t/test.pl");
+}
+plan(tests => 5);
+
 END { unlink "./__taint__$$" }
 
-print "1..5\n";
 use IO::File;
-$x = new IO::File "> ./__taint__$$" || die("Cannot open ./__taint__$$\n");
+my $x = new IO::File "> ./__taint__$$" || die("Cannot open ./__taint__$$\n");
 print $x "$$\n";
 $x->close;
 
 $x = new IO::File "< ./__taint__$$" || die("Cannot open ./__taint__$$\n");
-chop($unsafe = <$x>);
+chop(my $unsafe = <$x>);
 eval { kill 0 * $unsafe };
-print "not " if ((($^O ne 'MSWin32') && ($^O ne 'NetWare')) and ($@ !~ /^Insecure/o));
-print "ok 1\n";
+SKIP: {
+  skip($^O) if $^O eq 'MSWin32' or $^O eq 'NetWare';
+  like($@, '^Insecure');
+}
 $x->close;
 
 # We could have just done a seek on $x, but technically we haven't tested
 # seek yet...
 $x = new IO::File "< ./__taint__$$" || die("Cannot open ./__taint__$$\n");
 $x->untaint;
-print "not " if ($?);
-print "ok 2\n"; # Calling the method worked
+ok(!$?); # Calling the method worked
 chop($unsafe = <$x>);
 eval { kill 0 * $unsafe };
-print "not " if ($@ =~ /^Insecure/o);
-print "ok 3\n"; # No Insecure message from using the data
+unlike($@,'^Insecure');
 $x->close;
 
-# this will segfault if it fails
+TODO: {
+  todo_skip("Known bug in 5.10.0",2) if $] >= 5.010 and $] < 5.010_001;
 
-sub PVBM () { 'foo' }
-{ my $dummy = index 'foo', PVBM }
+  # this will segfault if it fails
 
-eval { IO::Handle::untaint(PVBM) };
-print "ok 4\n";
+  sub PVBM () { 'foo' }
+  { my $dummy = index 'foo', PVBM }
 
-eval { IO::Handle::untaint(\PVBM) };
-print "ok 5\n";
+  eval { IO::Handle::untaint(PVBM) };
+  pass();
+
+  eval { IO::Handle::untaint(\PVBM) };
+  pass();
+}
 
 exit 0;
